tests/error/comptime/check_inplace_construct6.bz
// error: invalid construction of an object of type 'i32'
// note: while evaluating expression at compile time
// note: address points to a subobject of one of the elements in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc([i32, i32], 1);
		defer __builtin_comptime_free(p);

		__builtin_inplace_construct(p, [ 0, 0 ]);
		__builtin_inplace_construct(&(*p)[0], 0);
	});
}
